--- a/cards.html
+++ b/cards.html
@@ -70,13 +70,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="images/Cards.jpg" width="900" height="350" alt="First slide">
+            <img class="d-block img-fluid" src="images/Cards/c3.jpg" width="900" height="350" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="images/Plikove.jpg" width="900" height="350" alt="Second slide">
+            <img class="d-block img-fluid" src="images/Cards/c5.jpg" width="900" height="350" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="images/Dekor/020/img767.jpg" width="900" height="350" alt="Third slide">
+            <img class="d-block img-fluid" src="images/Cards/c6.jpg" width="900" height="350" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
