--- a/decorations.html
+++ b/decorations.html
@@ -70,7 +70,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="images/Cards.jpg" width="900" height="350" alt="First slide">
+            <img class="d-block img-fluid" src="images\pics\plikove\2\img715.jpg" width="900" height="350" alt="First slide">
           </div>
           <div class="carousel-item">
             <img class="d-block img-fluid" src="images/Plikove.jpg" width="900" height="350" alt="Second slide">
