--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Copy Center декорации</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -88,40 +88,54 @@
     <!-- Page Content -->
     <div class="container">
 
-      <h1 class="my-4">Welcome to Modern Business</h1>
-
+      <h1 class="my-4">Добре дошли в Copy Center Декорации</h1>
+      <div class="row">
+        <div class="col-lg-12 mb-12">
+          <div class="card h-100">
+      <h5 class="card-header">Вие имате богата фантазия, много идеи, достатъчно свободно време? Но нямате възможност
+        за дълги обиколки за да откриете подходящите материали? За вашето удобство създадохме нашият
+        нов сайт за декорации. Всички фигурки могат да бъдат поръчани от различен картон, цвят и размер!
+        При промени – цените са по договаряне, но ако предпочитате готовите продукти, надникнете в сайта ни
+        с готови предложения.</h5>
+          </div>
+        </div>
+      </div>
       <!-- Marketing Icons Section -->
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">Картички и покани</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">При поръчка на картичка/и избирате за какъв повод е картичката и може
+                да си изберете какви елементи да бъдат изрязани в нея. Те са
+                идеални за сватби, рожденни дни, празници и други поводи, изработени са
+                от качествен картон и с красиви детайлни елементи.
+                Картонът може да бъде обикновен, мраморен или перлен.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="cards.html" class="btn btn-primary">Виж картички и покани</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">Пликове за пари</h4>
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="envelopes.html" class="btn btn-primary">Виж пликове</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">Елементи за декорация</h4>
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="decorations.html" class="btn btn-primary">Виж елементи за декорация</a>
             </div>
           </div>
         </div>
@@ -129,7 +143,7 @@
       <!-- /.row -->
 
       <!-- Portfolio Section -->
-      <h2>Portfolio Heading</h2>
+      <h2>Нови продукти</h2>
 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
