--- a/decorations.html
+++ b/decorations.html
@@ -33,11 +33,11 @@
           <a class="nav-link" href="index.html">Начало</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Продукти</a>
+          <a class="nav-link" href="products.html">Продукти</a>
           <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">За поръчка</a>
+          <a class="nav-link" href="contact.html">За поръчка</a>
         </li>
       </ul>
     </div>
@@ -202,7 +202,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+    <p class="m-0 text-center text-white">Copyright &copy; Copy Center 2017</p>
   </div>
   <!-- /.container -->
 </footer>
