--- a/envelopes.html
+++ b/envelopes.html
@@ -37,7 +37,7 @@
           <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">За поръчка</a>
+          <a class="nav-link" href="contact.html">За поръчка</a>
         </li>
       </ul>
     </div>
@@ -70,13 +70,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="images\pics\plikove\2\img715.jpg" width="900" height="350" alt="First slide">
+            <img class="d-block img-fluid" src="images/pics/plikove/2/img715.jpg" width="900" height="350" alt="First slide">
           </div>
           <div class="carousel-item">
             <img class="d-block img-fluid" src="images/Plikove.jpg" width="900" height="350" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="images\pics\plikove\1\1.jpg" width="900" height="350" alt="Third slide">
+            <img class="d-block img-fluid" src="images/pics/plikove/1/1.jpg" width="900" height="350" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -202,7 +202,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+    <p class="m-0 text-center text-white">Copyright &copy; Copy Center 2017</p>
   </div>
   <!-- /.container -->
 </footer>
