--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="products.html">Продукти</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">За поръчка</a>
+            <a class="nav-link" href="contact.html">За поръчка</a>
           </li>
         </ul>
       </div>
@@ -90,13 +90,18 @@
 
       <h1 class="my-4">Добре дошли в Copy Center Декорации</h1>
       <div class="row">
-        <div class="col-lg-12 mb-12">
+        <div class="col-lg-6 mb-12">
           <div class="card h-100">
       <h5 class="card-header">Вие имате богата фантазия, много идеи, достатъчно свободно време? Но нямате възможност
         за дълги обиколки за да откриете подходящите материали? За вашето удобство създадохме нашият
         нов сайт за декорации. Всички фигурки могат да бъдат поръчани от различен картон, цвят и размер!
         При промени – цените са по договаряне, но ако предпочитате готовите продукти, надникнете в сайта ни
         с готови предложения.</h5>
+          </div>
+        </div>
+        <div class="col-sm-6 mb-12">
+          <div class="card h-100">
+            <img src="images/about.jpg" width="100%" height="80%">
           </div>
         </div>
       </div>
@@ -255,7 +260,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Copy Center 2017</p>
       </div>
       <!-- /.container -->
     </footer>
