--- a/index.html
+++ b/index.html
@@ -91,18 +91,16 @@
       <h1 class="my-4">Добре дошли в Copy Center Декорации</h1>
       <div class="row">
         <div class="col-lg-6 mb-12">
-          <div class="card h-100">
+
       <h5 class="card-header">Вие имате богата фантазия, много идеи, достатъчно свободно време? Но нямате възможност
         за дълги обиколки за да откриете подходящите материали? За вашето удобство създадохме нашият
         нов сайт за декорации. Всички фигурки могат да бъдат поръчани от различен картон, цвят и размер!
         При промени – цените са по договаряне, но ако предпочитате готовите продукти, надникнете в сайта ни
         с готови предложения.</h5>
-          </div>
+
         </div>
-        <div class="col-sm-6 mb-12">
-          <div class="card h-100">
+        <div class="col-lg-6 mb-12">
             <img src="images/about.jpg" width="100%" height="80%">
-          </div>
         </div>
       </div>
       <!-- Marketing Icons Section -->
