--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item active" style="background-image: url('images/Cards1900.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
+              <h3>Картички и покани</h3>
+              <p>Картички и покани по ваш дизайн</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item" style="background-image: url('images/pics/plikove/1.50/img735.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Second Slide</h3>
-              <p>This is a description for the second slide.</p>
+              <h3>Пликове</h3>
+              <p>Пликове от картон тип мрамор и перла</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item" style="background-image: url('images/about.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Third Slide</h3>
-              <p>This is a description for the third slide.</p>
+              <h3>Елементи за декорация</h3>
+              <p>Всякакви видове елементи за декорация</p>
             </div>
           </div>
         </div>
@@ -94,13 +94,13 @@
 
       <h5 class="card-header">Вие имате богата фантазия, много идеи, достатъчно свободно време? Но нямате възможност
         за дълги обиколки за да откриете подходящите материали? За вашето удобство създадохме нашият
-        нов сайт за декорации. Всички фигурки могат да бъдат поръчани от различен картон, цвят и размер!
-        При промени – цените са по договаряне, но ако предпочитате готовите продукти, надникнете в сайта ни
-        с готови предложения.</h5>
+        нов сайт за декорации. <br>Всички фигурки могат да бъдат поръчани от различен картон, цвят и размер!
+        <br>При промени – цените са по договаряне, но ако предпочитате готовите продукти, надникнете в сайта ни
+        с готови предложения.<br><br><br><br></h5>
 
         </div>
         <div class="col-lg-6 mb-12">
-            <img src="images/about.jpg" width="100%" height="80%">
+            <img src="images/about.jpg" class="img-rounded" width="500" height="300">
         </div>
       </div>
       <!-- Marketing Icons Section -->
