--- a/decorations.html
+++ b/decorations.html
@@ -70,10 +70,10 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="images\pics\plikove\2\img715.jpg" width="900" height="350" alt="First slide">
+            <img class="d-block img-fluid" src="images/Dekor/015/img866.jpg" width="900" height="350" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="images/Plikove.jpg" width="900" height="350" alt="Second slide">
+            <img class="d-block img-fluid" src="images/Dekor/015/img896.jpg" width="900" height="350" alt="Second slide">
           </div>
           <div class="carousel-item">
             <img class="d-block img-fluid" src="images/Dekor/020/img767.jpg" width="900" height="350" alt="Third slide">
