Cards envelopes index update

--- a/envelopes.html
+++ b/envelopes.html
@@ -93,96 +93,73 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images\pics\plikove\020-030\img811.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item One</a>
+                <a href="#">Тагове</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <h5>0,50лв</h5>
+              <p class="card-text"><b>Материал:</b> Картон<br>
+                <b> Размер:</b> По желание<br>
+                Цена за 1 бр: 0,50лв.<br>
+                Цена за 5 бр: 2,50лв.<br>
+                Цена за 10 бр: 4,50лв.<br>
+                Цена за 20 бр: 9лв.</p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/pics/plikove/1/1.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Two</a>
+                <a href="#">Пликове за пари</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <h5>1лв</h5>
+              <p class="card-text"><b>Материал:</b> Картон<br>
+                <b> Размер:</b> По желание<br>
+                Цена за 1 бр: 1лв.<br>
+                Цена за 5 бр: 5лв.<br>
+                Цена за 10 бр: 9лв.<br>
+                Цена за 20 бр: 18лв.</p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/pics/plikove/1.50/img747.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Three</a>
+                <a href="#">Пликове мрамор</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <h5>1,50лв</h5>
+              <p class="card-text"><b>Материал:</b> Мраморен картон<br>
+                <b> Размер:</b> По желание<br>
+                Цена за 1 бр: 1.50лв.<br>
+                Цена за 5 бр: 7.50лв.<br>
+                Цена за 10 бр: 13.50лв.<br>
+                Цена за 20 бр: 27лв.<br>
+                 </p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/pics/plikove/2/img710.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Four</a>
+                <a href="#">Пликове перла</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Five</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Six</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <h5>2лв</h5>
+              <p class="card-text"><b>Материал:</b> Перлен картон<br>
+                <b> Размер:</b> По желание<br>
+                Цена за 1 бр: 2лв.<br>
+                Цена за 5 бр: 10лв.<br>
+                Цена за 10 бр: 18лв.<br>
+                Цена за 20 бр: 36лв.</p>
             </div>
           </div>
         </div>
