--- a/cards.html
+++ b/cards.html
@@ -93,99 +93,64 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/Cards/c1.jpg" alt="" height="250"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item One</a>
+                <a href="#">Картички картон</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>1лв</h5>
+              <p class="card-text">
+                Размер: По желание <br>
+                Цена за 1 бр: 1лв.<br>
+                Цена за 5 бр: 5лв.<br>
+                Цена за 10 бр: 9лв.<br>
+                Цена за 20 бр: 18лв.<br>
+                <b>Цената е обявена за Размер: 12см на 14,5см</b></p>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
+
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/Cards/c4.jpg" alt="" height="250"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Two</a>
+                <a href="#">Картички мрамор</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+              <h5>1,50лв</h5>
+              <p class="card-text">
+                Размер: По желание <br>
+                Цена за 1 бр: 1,50лв.<br>
+                Цена за 5 бр: 7,50лв.<br>
+                Цена за 10 бр: 13,50лв.<br>
+                Цена за 20 бр: 27лв.<br>
+                <b>Цената е обявена за Размер: 12см на 14,5см</b></p></p>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
+
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="images/Cards/c11.jpg" alt="" height="250"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Three</a>
+                <a href="#">Картички перлени</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>2лв</h5>
+              <p class="card-text">
+                Размер: По желание <br>
+                Цена за 1 бр: 2лв.<br>
+                Цена за 5 бр: 10лв.<br>
+                Цена за 10 бр: 18лв.<br>
+                Цена за 20 бр: 36лв.<br>
+               <b>Цената е обявена за Размер: 12см на 14,5см</b>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
+
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Four</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Five</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Six</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
 
       </div>
       <!-- /.row -->
