--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('images/Cards1900.jpg')">
+        <div class="carousel-item active" style="background-image: url('images/Cards/C6.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Картички и покани</h3>
             <p>Картички и покани по ваш дизайн</p>
@@ -109,11 +109,8 @@
           <div class="card h-100">
             <h4 class="card-header">Картички и покани</h4>
             <div class="card-body">
-              <p class="card-text">При поръчка на картичка/и избирате за какъв повод е картичката и може
-                да си изберете какви елементи да бъдат изрязани в нея. Те са
-                идеални за сватби, рожденни дни, празници и други поводи, изработени са
-                от качествен картон и с красиви детайлни елементи.
-                Картонът може да бъде обикновен, мраморен или перлен.</p>
+              <p class="card-text">Картичките са идеални за сватби, рожден ден и всякакви празници. Изработват се от качествен картон и с красиви детайлни елементи. 
+              Могат да се използват обикновен, мраморен, перлен и др. видове картон които придават допълнителна красота.</p>
             </div>
             <div class="card-footer">
               <a href="cards.html" class="btn btn-primary">Виж картички и покани</a>
@@ -124,7 +121,8 @@
           <div class="card h-100">
             <h4 class="card-header">Пликове за пари</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+              <p class="card-text">Пликовете за пари са един чудесен подарък за сватби, рожденни дени и всякакви видове поводи. Изработват се от различни качествени картони в широка цветна гама.
+              Пликовете могат да бъдат изработени от мраморен, перлен, обикновен и др. вид картон за допълнителна красота.</p>
             </div>
             <div class="card-footer">
               <a href="envelopes.html" class="btn btn-primary">Виж пликове</a>
@@ -135,7 +133,7 @@
           <div class="card h-100">
             <h4 class="card-header">Елементи за декорация</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">Уникални и красиви елементи за декорация на всякакъв вид подаръци и изделия. Изработени от качествени картони и хартия в различни цветове по ваш избор.</p>
             </div>
             <div class="card-footer">
               <a href="decorations.html" class="btn btn-primary">Виж елементи за декорация</a>
