--- a/products.html
+++ b/products.html
@@ -50,8 +50,8 @@
   <div class="row">
 
     <div class="col-lg-3">
-
-      <h1 class="my-4">Copy Center Декорации</h1>
+<img src="images\Logo6.png" height="200">
+      <h1 class="my-4" >Продукти</h1>
       <div class="list-group">
         <a href="cards.html" class="list-group-item">Картички и покани</a>
         <a href="envelopes.html" class="list-group-item">Пликове за пари</a>
