--- a/products.html
+++ b/products.html
@@ -93,36 +93,48 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="Cards.html"><img class="card-img-top" src="images/Cards/c7.jpg" height="150"></a>
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="Cards.html">Картички и покани</a>
+                <a href="#">Item One</a>
               </h4>
-              <p class="card-text">Изработени от обикновен, мраморен и перлен картон в различни цветове.</p>
+              <h5>$24.99</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="envelopes.html"><img class="card-img-top" src="images\pics\plikove\2\img748.jpg" height="150"></a>
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="envelopes.html">Пликове за пари</a>
+                <a href="#">Item Two</a>
               </h4>
-              <p class="card-text">Изработени от обикновен, мраморен и перлен картон в различни цветове.</p>
+              <h5>$24.99</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="decorations.html"><img class="card-img-top" src="images\pics\fig\fig020\img889.jpg" height="150"></a>
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="decorations.html">Декорации</a>
+                <a href="#">Item Three</a>
               </h4>
-              <p class="card-text">Изработени от обикновен, мраморен и перлен картон в различни цветове.</p>
+              <h5>$24.99</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
         </div>
