--- a/cards.html
+++ b/cards.html
@@ -50,8 +50,8 @@
   <div class="row">
 
     <div class="col-lg-3">
-        <img src="images\Logo6.png" height="200">
-      <h1 class="my-4" >Картички</h1>
+        <a href="index.html"><img src="images\Logo6.png" height="200"></a>
+     <a href="products.html"> <h1 class="my-4" >Продукти</h1></a>
       <div class="list-group">
         <a href="cards.html" class="list-group-item active">Картички и покани</a>
         <a href="envelopes.html" class="list-group-item">Пликове за пари</a>
